kubernetes/apps/networking/gateway/envoy/manifests/gateway-infrastructure.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.garb.dev
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      # when using gateway-apis in cilium it also creates a service
      # with a different name and tries to take this IP.
      # the problem is the service created by cilium is not the one used by envoy.
      # therefore, the service is disabled
      io.cilium/lb-ipam-ips: 192.168.40.22
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  namespace: networking
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.40.23
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.garb.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
